--- a/package.json
+++ b/package.json
@@ -12,7 +12,27 @@
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^0.27.2",
+    "expo-barcode-scanner": "~11.4.0",
+    "expo-constants": "~13.2.4",
+    "expo-device": "~4.3.0",
+    "expo-notifications": "~0.16.1",
+    "expo-secure-store": "~11.3.0",
+    "lottie-react-native": "^5.1.5",
+    "react-hook-form": "^7.43.9",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-root-toast": "^3.4.0",
+    "react-native-safe-area-context": "^4.5.2",
+    "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "11.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
