--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.7",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^0.27.2",
-    "expo-barcode-scanner": "~11.4.0",
-    "expo-constants": "~13.2.4",
-    "expo-device": "~4.3.0",
-    "expo-notifications": "~0.16.1",
-    "expo-secure-store": "~11.3.0",
-    "lottie-react-native": "^5.1.5",
+    "expo": "~48.0.15",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
+    "expo-notifications": "~0.18.1",
+    "expo-secure-store": "~12.1.1",
+    "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
+    "react": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "^3.1.0",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-root-toast": "^3.4.0",
-    "react-native-safe-area-context": "^4.5.2",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.23.0"
