--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-barcode-scanner": "~12.3.2",
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-notifications": "~0.18.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
