--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "expo": "~48.0.15",
     "expo-barcode-scanner": "~12.3.2",
+    "expo-blur": "~12.2.2",
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
