--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -20,6 +21,7 @@
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
     "expo-notifications": "~0.18.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
@@ -30,12 +32,15 @@
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
+    "react-native-modal-datetime-picker": "^17.0.0",
+    "react-native-open-maps": "^0.4.3",
     "react-native-reanimated": "~2.14.4",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.15.0",
+    "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "11.23.0"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
